# soatable

./: .clangd  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  FEATURES.md  IMPROVEMENTS.md  LICENSE  README.md  conanfile.py  vcpkg.json
.github/workflows/: ci.yaml  docs.yaml
benchmarks/: CMakeLists.txt  soatable_benchmark.cpp
cmake/: Helpers.cmake  Versions.cmake  soatableConfig.cmake.in
docs/: Doxyfile.in
example/: CMakeLists.txt  soatable_example.cpp
example/cookbook/: aerospace_telemetry.cpp  finance_tick_store.cpp  game_ecs.cpp  output.hpp  scientific_table.cpp
include/soatable/: compute.hpp  concurrent.hpp  dynamic.hpp  mmap.hpp  pmr.hpp  query.hpp  reflect.hpp  serialize.hpp  soatable.hpp  timeseries.hpp  units.hpp
packaging/soatable/: portfile.cmake  usage  vcpkg.json
packaging/vcpkg/ports/soatable/: portfile.cmake  vcpkg.json
scripts/: amalgamate.py  run_benchmarks.sh
tests/: CMakeLists.txt  no_exceptions_check.cpp  soatable_tests.cpp  warning_check.cpp
tests/compile_fail/: dimension_mismatch.cpp  duplicate_columns.cpp  empty_table.cpp  unregistered_column.cpp
tests/unittests/: allocator_test.cpp  aosoa_test.cpp  batch_test.cpp  compression_test.cpp  compute_test.cpp  concurrent_test.cpp  const_correctness_test.cpp  deprecated_alias_test.cpp  dynamic_test.cpp  exception_safety_test.cpp  expected_test.cpp  include_hygiene_other_tu.cpp  include_hygiene_test.cpp  invariant_test.cpp  mmap_test.cpp  query_test.cpp  reflect_test.cpp  row_handle_test.cpp  select_test.cpp  serialize_test.cpp  sort_test.cpp  span_test.cpp  table_test.cpp  test_types.hpp  timeseries_test.cpp  units_test.cpp  validity_test.cpp  view_test.cpp
tools/visualizers/: README.md  soatable.natvis  soatable_gdb.py
